移除用户角色添加和删除接口，使用设置用户角色接口
